tests/tests/test_runs/snapshots/test_runs__scalar_3l_cross_section_inspects__scalar_3l_cross_section_gl30_quadratic_pair_numerator_uv_off_threshold_on.snap
---
source: tests/tests/test_runs/scalar_3L_cross_section_inspects.rs
expression: "format!(\"re = {:.17e}\\nim = {:.17e}\", weight.re, weight.im)"
---
re = -3.70562549922939267e-13
im = 1.30584503599941593e-16
